--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<li><a href="https://www.linkedin.com/in/yyge/" class="fab fa-linkedin-in"><span class="label"></span></a></li>
 							<li><a href="https://github.com/Yuanyuan229" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<li><a href="https://medium.com/@yyge" class="icon brands fab fa-medium"><span class="label">Medium</span></a></li>
-							<li><a href="yyge@ucdavis.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="mailto:yyge@ucdavis.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -373,7 +373,7 @@ Through my past professional and project experience, I have grown as a reliable 
 							<li><a href="https://www.linkedin.com/in/yyge/" class="fab fa-linkedin"><span class="label"></span></a></li>
 							<li><a href="https://github.com/Yuanyuan229" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<li><a href="https://medium.com/@yyge" class="icon brands fab fa-medium"><span class="label">Medium</span></a></li>
-							<li><a href="yyge@ucdavis.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="mailto:yyge@ucdavis.edu" class="icon solid fa-envelope"></a></li>
 					</ul>
 				<!-- Copyright -->
 					<ul class="copyright" >
