--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Through my past professional and project experience, I have grown as a reliable 
 
 <!-- 							<a href="#" class="image featured"><img src="images/2.jpeg"/></a> -->
 <h4>Yuanyuan Ge<br />
-							San Francisco, CA |<a href="yyge@ucdavis.edu"> yyge@ucdavis.edu</a><br /><br /></h4>
+							San Francisco, CA |<a href="mailto:yyge@ucdavis.edu"> yyge@ucdavis.edu</a><br /><br /></h4>
 							<p>Hi, thanks for visiting my personal website! Nice to meet you!​<br /><br />
 I am a consultant and data analyst in bay area. ​<br />
 I am passionate to extract data insights into actionable pivots and make impacts.​<br />
