--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Through my past professional and project experience, I have grown as a reliable 
 					</section>
 				
 				<!-- About Me -->
-					<section id="about" class="three">
+					<section id="about" class="two">
 						<div class="container" align = "left">
 
 							<header>
@@ -113,7 +113,7 @@ Through my past professional and project experience, I have grown as a reliable 
 					</section>
 					
 					<!-- Portfolio -->
-					<section id="portfolio" class="two">
+					<section id="portfolio" class="three">
 						<div class="container">
 
 							<header>
