--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Through my past professional and project experience, I have grown as a reliable 
 							</header>
 
 							<footer>
-								<a href="#about" class="button scrolly" color ="#B0C4DE"> know more about me<br /> ▽</a>
+								<a href="#about" class="button scrolly" color ="#B0C4DE"> know more about me <br /> ▽</a>
 							</footer>
 
 						</div>
@@ -100,15 +100,16 @@ Through my past professional and project experience, I have grown as a reliable 
 <!-- 							<a href="#" class="image featured"><img src="images/2.jpeg"/></a> -->
 <h4>Yuanyuan Ge<br />
 							San Francisco, CA |<a href="mailto:yyge@ucdavis.edu"> yyge@ucdavis.edu</a><br /><br /></h4>
-							<p>Hi, thanks for visiting my personal website! Nice to meet you!​<br /><br />
-I am a consultant and data analyst in bay area. ​<br />
-I am passionate to extract data insights into actionable pivots and make impacts.​<br />
+							<p>Hi, thanks for visiting my website! Nice to meet you!​<br /><br />
+I am a data analyst living in the bay area. ​<br />
+I am passionate about extracting data insights into actionable pivots and making impacts.​<br />
 Through my past professional and project experience, I have grown as a reliable team player, a self-starter, and most importantly, a nimble-learner.​<br />
-<br />Keep going, I see myself as a growing analyst who can empower business teams with accessible and actionable data insights, as well as building end-to-end solutions.<br />
+<br />Keep going, I see myself as a growing analyst/consultant who can empower teams with data insights, and build end-to-end solutions to business problems.<br />
 <br />If you share the same interests, don't hesitate to reach out to me!
  
 ​
 ​</p>
+								
 						</div>
 					</section>
 					
